# aaf2resolve-spec

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHATGPT.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  PROJECT_COMPLETION_BRIEF.md  README.md  analyze_effect_params.py  parse_aaf.py  pyproject.toml  remain  requirements-dev.txt  test_enhanced_parser.py  validate_canonical.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: aaf-validate-pr.yml  agents-on-label-enhanced.yml  agents-on-label.yml  ci.yml  reports.yml
adk/agents/: orchestrator.py
adk/mcp/: server.py
adk/models/: model_adapters.py
adk/monitoring/: memory.jsonl  status.py  test.json
adk/tools/: memory_cli.py  repo_tools.py  safe_tools.py
adk/utils/: memory_store.py
docs/: collaboration_protocol.md  data_model_json.md  db_schema.sql  fcpxml_rules.md  inspector_rule_pack.md  legacy_compressed_json_rules.md  project_brief.md
docs/notes/: TBC_NOTES.md
docs/pitches/: claude_pitch.md  copilot_ms_pitch.md  synthesis.md
github/instructions/: *.instructions.md
handoff/: handoff.yml
handoff/templates/: handoff.template.yaml
reports/integration/: candidate_FINAL.canonical.json  candidate_compare.report.json  candidate_from_aaf.fcpxml  (+11 more)
src/: README.md  build_canonical.py  build_canonical.py.backup  load_db.py  parse_aaf.py  validate_canonical.py  write_fcpxml.py
tests/: test_event_id_validation.py  test_event_id_validation_param.py  test_smoke.py
tools/: mcp_orchestrator.py  mcp_status_monitor.py  monitor_agents.py  save_memory_note.sh
(+8 files in other folders)
